adds history-limit in .tmux.conf

--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -12,5 +12,8 @@ bind - split-window -v
 unbind '"'
 unbind %
 
+# history-limit
+set -g history-limit 5000
+
 # reload config file
-bind r source-file ~/dev/dev-setup/.tmux.conf
+bind r source-file ~/dev/dev-setup/dotfiles/.tmux.conf
