--- a/dotfiles/.gitconfig
+++ b/dotfiles/.gitconfig
@@ -1,7 +1,7 @@
 # This is Git's per-user configuration file.
 [user]
   name = Nandakishore Saboo
-  email = nandakishoresaboo@gmail.com
+  email = nsaboo@colortokens.com
 [core]
   editor = vim
 	excludesfile = /Users/nsaboo/.gitignore
